# DYOR

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: agent-system-builder.md  api-developer.md  eval-developer.md  foundation-builder.md  frontend-developer.md  graph-rag-developer.md  mcp-developer.md  rag-developer.md
api/: __init__.py  main.py
api/middleware/: __init__.py  streaming.py
api/routes/: __init__.py  analyze.py  chat.py  reports.py
data/knowledge_graph/: aliases.json  graph.json
data/reports/: arbitrum_research_report.md
data/token_data/: arb.json
docs/: 01-PRD.md  02-TDD.md  03-DEVELOPMENT-PHASES.md  coingecko.api-profile.md  cryptopanic.api-profile.md  workflow.mermaid
eval/: __init__.py  metrics.py  run_eval.py  test_cases.json
eval/results/: eval_20260309_214512.json
reports/: APRO Oracle.md  Abstract.md  Agentic commerce.md  Agentic fund of funds.md  Aspecta.md  Chainlink.md  Circle Payment Network.md  CodeX.md  Deep dive into intent protocols and markets.md  Embodied AI + Crypto.md  Everlyn.md  Flyingtulip.md  Hemi.md  Huma Finance.md  Hylo.md  Hyperliquid.md  Hyperspace.md  Infofi.md  Initia.md  Irys.md  Kamino.md  Kite AI.md  LiquiFi.md  MetaDAO.md  Mind Network.md  Mira.md  Near.md  Nexus.md  Niural.md  Perp dex.md  R2USD.md  RWA Tokenization.md  SOON.md  Sentient.md  Talus.md  Theo.md  TreeHouse.md  Tria.md  Tron .md  Virtuals Protocol - Unicorn.md  (+6 more)
src/: __init__.py  config.py
src/agents/: __init__.py  analyst.py  (+7 more)
tests/: __init__.py  conftest.py  generate_report.py
ui/: app.py
(+87 files in other folders)
